2021-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugRreports): Added to DESCRIPTION file

2021-01-02  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated, added some badges

	* .travis.yml: Update to 'bionic' and R 4.0.*

2019-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll version number and date

	* src/Makevars (PKG_CPPFLAGS): Add -DBOOST_NO_AUTO_PTR for quieter build

	* src/init.c: Added, based on pnrrs.r plus post-processing for Modules
	* R/RcppExports.R: Regenerated
	* src/RcppExports.cpp: Idem

2018-12-23  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Add .registration=TRUE to useDynLib()

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https for curl fetch

2017-07-09  Dirk Eddelbuettel  <edd@debian.org>

	* R/bdt.R (getLastDayOfWeekInMonth, getFirstDayOfWeekInMonth): Use
	dow instead of nthday for first argument
	* man/dateFuntions.Rd: Corresponding change

2016-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Added seealso reference to anytime

2016-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Added 'seealso' reference to anytime which
	was developed based on the initial work here
	* man/toPOSIXct.Rd: Ditto

2016-09-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: All functions returns NumericVector types and
	deal with input timezone; (comparison) functions charToPOSIXct and
	cToPOSIXct have documentation too
	* man/toPOSIXct.Rd: Updated
	* man/cToPOSIXct.Rd: Added
	* man/charToPOSIXct.Rd: Added

	* demo/00Index: Updated

	* .travis.yml: Switch to using run.sh for Travis CI

2016-08-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/toPOSIXct.cpp: Additional format using '%a %b %d'

2015-03-25  Dirk Eddelbuettel  <edd@debian.org>
